3.network-alb.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Create an Application Load Balancer and listener

Parameters:
  EnvironmentName:
    Type: String

Resources:
  ALBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub "${EnvironmentName}-alb-sg"
      GroupDescription: !Sub "${EnvironmentName} ALB Security Group"
      VpcId: !ImportValue
        Fn::Sub: "${EnvironmentName}-vpc"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

  ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    DependsOn: ALBSG
    Properties:
      Name: !Sub "${EnvironmentName}-alb"
      Type: application
      Scheme: internet-facing
      Subnets:
        - !ImportValue
            Fn::Sub: "${EnvironmentName}-public-subnet-1"
        - !ImportValue
            Fn::Sub: "${EnvironmentName}-public-subnet-2"
        - !ImportValue
            Fn::Sub: "${EnvironmentName}-public-subnet-3"
      SecurityGroups: 
        - !Ref ALBSG
      LoadBalancerAttributes:
        - Key: idle_timeout.timeout_seconds
          Value: '60'
        - Key: load_balancing.cross_zone.enabled
          Value: 'true'
        - Key: routing.http.drop_invalid_header_fields.enabled
          Value: 'false'

  HTTP80Listener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    DependsOn: ApplicationLoadBalancer
    Properties:
      DefaultActions:
        - Type: redirect
          RedirectConfig:
            StatusCode: HTTP_301
            Protocol: HTTPS
            Port: '443'
            Host: '#{host}'
            Path: '/#{path}'
            Query: '#{query}'
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 80
      Protocol: HTTP

  HTTPS443Listener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    DependsOn: ApplicationLoadBalancer
    Properties:
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 443
      Protocol: HTTPS
      Certificates:
        - CertificateArn: !Sub "arn:aws:acm:${AWS::Region}:${AWS::AccountId}:certificate/certificate-id"
      DefaultActions:
        - Type: fixed-response
          FixedResponseConfig:
            StatusCode: 200
      SslPolicy: ELBSecurityPolicy-TLS13-1-2-2021-06

Outputs:
  ALBSG:
    Value: !Ref ALBSG
    Export:
      Name: !Sub "${EnvironmentName}-alb-sg"
  ApplicationLoadBalancer:
    Value: !Ref ApplicationLoadBalancer
    Export:
      Name: !Sub "${EnvironmentName}-alb"
